add new wildfly post

--- a/_posts/2019-12-18-wildfly-ha-1.md
+++ b/_posts/2019-12-18-wildfly-ha-1.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Building a Mission-Critical Open Source Environment for the Java Platform - Chapter I
-tags: [jboss, wildfly, ha, redhat]
+tags: [jboss, wildfly, ha, redhat, centos, modcluster]
 comments: true
 ---
 
@@ -77,6 +77,8 @@ These steps must be performed on both Apache Web Servers:
 Apache Web Server - apache-httpd-01.mmagnani.lab
 
 {% highlight bash %}
+[root@apache-httpd-01 ~]# cat /etc/redhat-release 
+CentOS Linux release 7.7.1908 (Core)
 [root@apache-httpd-01 ~]# yum update -y
 [root@apache-httpd-01 ~]# yum install httpd -y
 [root@apache-httpd-01 ~]# echo "Web Server 01" > /var/www/html/index.html
@@ -133,6 +135,8 @@ vrrp_instance VI_1 {
 Apache Web Server - apache-httpd-02.mmagnani.lab
 
 {% highlight bash %}
+[root@apache-httpd-02 ~]# cat /etc/redhat-release 
+CentOS Linux release 7.7.1908 (Core)
 [root@apache-httpd-02 ~]# yum update -y
 [root@apache-httpd-02 ~]# yum install httpd -y
 [root@apache-httpd-01 ~]# echo "Web Server 02" > /var/www/html/index.html
