add new wildfly post

--- a/_posts/2019-12-21-wildfly-ha-2.md
+++ b/_posts/2019-12-21-wildfly-ha-2.md
@@ -15,6 +15,9 @@ Let's start building the application layer of our environment.These settings wil
 * server-slave-0.mmagnani.lab -10.0.0.67
 * server-slave-1.mmagnani.lab - 10.0.0.66
 
+
+Let's start with the server that will be the "Master":
+
 {% highlight bash %}
 [root@server-domain ~]# cat /etc/redhat-release 
 CentOS Linux release 7.7.1908 (Core)
@@ -54,7 +57,7 @@ Check that the WildFly process has gone up correctly:
 #suppress
 {% endhighlight %}
 
-It's a bit boring but let's repeat the same process for the other two servers.
+Now let's set up "Slave 0":
 
 {% highlight bash %}
 [root@server-slave-0 ~]# cat /etc/redhat-release 
@@ -95,7 +98,7 @@ Check that the WildFly process has gone up correctly:
 #suppress
 {% endhighlight %}
 
-And now on the last server:
+And now let's set up "Slave 1":
 
 {% highlight bash %}
 [root@server-slave-1 ~]# cat /etc/redhat-release 
