add new wildfly post

--- a/_posts/2019-12-21-wildfly-ha-2.md
+++ b/_posts/2019-12-21-wildfly-ha-2.md
@@ -139,11 +139,33 @@ Check that the WildFly process has gone up correctly:
 #suppress
 {% endhighlight %}
 
-It is! Now we have Wildfly running in Domain mode on all three servers.
+It is! Finally we have Wildfly running in Domain Mode on all three servers.
 
 ## Configuring the Master/Slave Architecture
 
+This part of the setup will need a little more hard work because requires attention to detail but don't worry, let's go step by step.
 
+The first step is to set the variables correctly so WildFly can understand where our settings are and what we want to do with them.
+
+Edit the `domain.conf` file and add the binding settings for the `JAVA_OPTS` variable:
+
+{% highlight bash %}
+[root@server-domain ~]# vim /usr/local/wildfly/wildfly-18.0.1.Final/bin/domain.conf
+
+if [ "x$JAVA_OPTS" = "x" ]; then
+   JAVA_OPTS="-Xms64m -Xmx512m -XX:MaxMetaspaceSize=256m -Djava.net.preferIPv4Stack=true"
+   JAVA_OPTS="$JAVA_OPTS -Djboss.modules.system.pkgs=$JBOSS_MODULES_SYSTEM_PKGS -Djava.awt.headless=true"
+   
+   #Add this line
+   JAVA_OPTS="$JAVA_OPTS -Djboss.bind.address.management=10.0.0.68 -Djboss.bind.address=10.0.0.68"
+else
+{% endhighlight %}
+
+Open the server URL and note that WildFly is running and accessible: http://10.0.0.68:8080
+
+![](/images/201912-hawildfly-06.png)
+
+The next step is to create a management user and a directory for the domain to starting the configuration of WildFly server topology.
 
 #WIP
 Best,
