--- a/_posts/2019-12-21-wildfly-ha-2.md
+++ b/_posts/2019-12-21-wildfly-ha-2.md
@@ -165,7 +165,78 @@ Open the server URL and note that WildFly is running and accessible: http://10.0
 
 ![](/images/201912-hawildfly-06.png)
 
-The next step is to create a management user and a directory for the domain to starting the configuration of WildFly server topology.
+The next step is to create/update a management user and a directory for the domain to starting the configuration of WildFly server topology.
+
+{% highlight bash %}
+[root@server-domain ~]# cd /usr/local/wildfly/wildfly-18.0.1.Final/bin
+[root@server-domain ~]# ./add-user.sh 
+
+What type of user do you wish to add? 
+ a) Management User (mgmt-users.properties) 
+ b) Application User (application-users.properties)
+(a): a
+
+Enter the details of the new user to add.
+Using realm 'ManagementRealm' as discovered from the existing property files.
+Username : admin
+User 'admin' already exists and is disabled, would you like to... 
+ a) Update the existing user password and roles 
+ b) Enable the existing user 
+ c) Type a new username
+(a): a
+Password recommendations are listed below. To modify these restrictions edit the add-user.properties configuration file.
+ - The password should be different from the username
+ - The password should not be one of the following restricted values {root, admin, administrator}
+ - The password should contain at least 8 characters, 1 alphabetic character(s), 1 digit(s), 1 non-alphanumeric symbol(s)
+Password : Redhat*#2
+Re-enter Password : Redhat*#2
+What groups do you want this user to belong to? (Please enter a comma separated list, or leave blank for none)[  ]: 
+Updated user 'admin' to file '/usr/local/wildfly/wildfly-18.0.1.Final/standalone/configuration/mgmt-users.properties'
+Updated user 'admin' to file '/usr/local/wildfly/wildfly-18.0.1.Final/domain/configuration/mgmt-users.properties'
+Updated user 'admin' with groups  to file '/usr/local/wildfly/wildfly-18.0.1.Final/standalone/configuration/mgmt-groups.properties'
+Updated user 'admin' with groups  to file '/usr/local/wildfly/wildfly-18.0.1.Final/domain/configuration/mgmt-groups.properties'
+Is this new user going to be used for one AS process to connect to another AS process? 
+e.g. for a slave host controller connecting to the master or for a Remoting connection for server to server EJB calls.
+yes/no? yes
+To represent the user add the following to the server-identities definition <secret value="WG9saW4qIzI=" />
+{% endhighlight %}
+
+Take note of the <secret value="WG9saW4qIzI=" />, this will be used to configure the Slaves connection.
+
+Now create a new directory called "master" based on the "domain" directory.
+
+{% highlight bash %}
+[root@server-domain ~]# pwd
+/usr/local/wildfly/wildfly-18.0.1.Final
+[root@server-domain ~]# cp -Rap domain master
+{% endhighlight %}
+
+Edit again the `domain.conf` file and add the binding settings for the `JAVA_OPTS` variable:
+
+{% highlight bash %}
+[root@server-domain ~]# vi /usr/local/wildfly/wildfly-18.0.1.Final/bin/domain.conf
+
+if [ "x$JAVA_OPTS" = "x" ]; then
+   JAVA_OPTS="-Xms64m -Xmx512m -XX:MaxMetaspaceSize=256m -Djava.net.preferIPv4Stack=true"
+   JAVA_OPTS="$JAVA_OPTS -Djboss.modules.system.pkgs=$JBOSS_MODULES_SYSTEM_PKGS -Djava.awt.headless=true"
+   
+   #Edit this line
+   JAVA_OPTS="$JAVA_OPTS -Djboss.bind.address.management=10.0.0.68 -Djboss.bind.address=10.0.0.68 -Djboss.domain.base.dir=/usr/local/wildfly/wildfly-18.0.1.Final/master"
+else
+{% endhighlight %}
+
+Restart WildFly and access the management URL by logging in with user "admin" and previously updated password: http://10.0.0.68:9990
+
+{% highlight bash %}
+[root@server-domain wildfly-18.0.1.Final]# systemctl restart wildfly
+{% endhighlight %}
+
+![](/images/201912-hawildfly-07.png)
+
+In the management console you will notice that we are still using the standard topology but we will work on it in the next steps. 
+
+![](/images/201912-hawildfly-08.png)
+
 
 #WIP
 Best,
