add new wildfly post

--- a/_posts/2019-12-21-wildfly-ha-2.md
+++ b/_posts/2019-12-21-wildfly-ha-2.md
@@ -211,7 +211,7 @@ Now create a new directory called "master" based on the "domain" directory.
 [root@server-domain ~]# cp -Rap domain master
 {% endhighlight %}
 
-Edit again the `domain.conf` file and add the binding settings for the `JAVA_OPTS` variable:
+Edit again the `domain.conf` file and add the configuration dir settings for the `JAVA_OPTS` variable:
 
 {% highlight bash %}
 [root@server-domain ~]# vi /usr/local/wildfly/wildfly-18.0.1.Final/bin/domain.conf
@@ -237,6 +237,54 @@ In the management console you will notice that we are still using the standard t
 
 ![](/images/201912-hawildfly-08.png)
 
+Now edit the domain.xml file and update the existing groups. Now the groups must be called "marketing" and "accounting" that will use the "full-ha" profile and "full-ha-sockets".
+
+{% highlight bash %}
+[root@server-domain ~]# pwd
+/usr/local/wildfly/wildfly-18.0.1.Final
+[root@server-domain ~]# vi master/configuration/domain.xml 
+{% endhighlight %}
+
+{% highlight xml %}
+    <server-groups>
+        <server-group name="marketing" profile="full-ha">
+            <jvm name="default">
+                <heap size="64m" max-size="512m"/>
+            </jvm>
+            <socket-binding-group ref="full-ha-sockets"/>
+        </server-group>
+        <server-group name="accounting" profile="full-ha">
+            <jvm name="default">
+                <heap size="64m" max-size="512m"/>
+            </jvm>
+            <socket-binding-group ref="full-ha-sockets"/>
+        </server-group>
+    </server-groups>
+{% endhighlight %}
+
+Save the domain.xml file.
+
+Edit again the `domain.conf` file and add the configuration file settings for the `JAVA_OPTS` variable:
+
+{% highlight bash %}
+[root@server-domain ~]# vi /usr/local/wildfly/wildfly-18.0.1.Final/bin/domain.conf
+
+if [ "x$JAVA_OPTS" = "x" ]; then
+   JAVA_OPTS="-Xms64m -Xmx512m -XX:MaxMetaspaceSize=256m -Djava.net.preferIPv4Stack=true"
+   JAVA_OPTS="$JAVA_OPTS -Djboss.modules.system.pkgs=$JBOSS_MODULES_SYSTEM_PKGS -Djava.awt.headless=true"
+   
+   #Edit this line
+   JAVA_OPTS="$JAVA_OPTS -Djboss.bind.address.management=10.0.0.68 -Djboss.bind.address=10.0.0.68 -Djboss.domain.base.dir=/usr/local/wildfly/wildfly-18.0.1.Final/master -Djboss.host.default.config=host-master.xml"
+else
+{% endhighlight %}
+
+Restart the WildFly service. Note that now a new topology will be presented:
+
+{% highlight bash %}
+[root@server-domain ~]#  systemctl restart wildfly
+{% endhighlight %}
+
+![](/images/201912-hawildfly-09.png)
 
 #WIP
 Best,
