update wildfly post

--- a/_posts/2019-12-21-wildfly-ha-2.md
+++ b/_posts/2019-12-21-wildfly-ha-2.md
@@ -54,7 +54,7 @@ Check that the WildFly process has gone up correctly:
 {% highlight bash %}
 [root@server-domain ~]# jps -m
 1571 jboss-modules.jar -mp /usr/local/wildfly/wildfly-18.0.1.Final/modules 
-#suppress
+##supressed
 {% endhighlight %}
 
 Now let's set up "Slave 0":
@@ -95,7 +95,7 @@ Check that the WildFly process has gone up correctly:
 {% highlight bash %}
 [root@server-slave-0 ~]# jps -m
 1968 jboss-modules.jar -mp /usr/local/wildfly/wildfly-18.0.1.Final/modules org.jboss.as.server
-#suppress
+##supressed
 {% endhighlight %}
 
 And now let's set up "Slave 1":
@@ -136,7 +136,7 @@ Check that the WildFly process has gone up correctly:
 {% highlight bash %}
 [root@server-slave-0 ~]# jps -m
 1948 jboss-modules.jar -mp /usr/local/wildfly/wildfly-18.0.1.Final/modules org.jboss.as.server
-#suppress
+##supressed
 {% endhighlight %}
 
 It is! Finally we have Wildfly running in Domain Mode on all three servers.
@@ -150,6 +150,7 @@ The first step is to set the variables correctly so WildFly can understand where
 Edit the `domain.conf` file and add the binding settings for the `JAVA_OPTS` variable:
 
 {% highlight bash %}
+##around line 50
 [root@server-domain ~]# vim /usr/local/wildfly/wildfly-18.0.1.Final/bin/domain.conf
 
 if [ "x$JAVA_OPTS" = "x" ]; then
@@ -159,6 +160,7 @@ if [ "x$JAVA_OPTS" = "x" ]; then
    #Add this line
    JAVA_OPTS="$JAVA_OPTS -Djboss.bind.address.management=10.0.0.68 -Djboss.bind.address=10.0.0.68"
 else
+##supressed
 {% endhighlight %}
 
 Open the server URL and note that WildFly is running and accessible: http://10.0.0.68:8080
@@ -214,6 +216,7 @@ Now create a new directory called "master" based on the "domain" directory.
 Edit again the `domain.conf` file and add the configuration dir settings for the `JAVA_OPTS` variable:
 
 {% highlight bash %}
+##around line 50
 [root@server-domain ~]# vi /usr/local/wildfly/wildfly-18.0.1.Final/bin/domain.conf
 
 if [ "x$JAVA_OPTS" = "x" ]; then
@@ -223,6 +226,7 @@ if [ "x$JAVA_OPTS" = "x" ]; then
    #Edit this line
    JAVA_OPTS="$JAVA_OPTS -Djboss.bind.address.management=10.0.0.68 -Djboss.bind.address=10.0.0.68 -Djboss.domain.base.dir=/usr/local/wildfly/wildfly-18.0.1.Final/master"
 else
+##supressed
 {% endhighlight %}
 
 Restart WildFly and access the management URL by logging in with user "admin" and previously updated password: http://10.0.0.68:9990
@@ -261,6 +265,7 @@ Edit the domain.xml file and update the existing groups. The groups must be call
             <socket-binding-group ref="full-ha-sockets"/>
         </server-group>
     </server-groups>
+##suppressed
 {% endhighlight %}
 
 Save the domain.xml file.
@@ -268,6 +273,7 @@ Save the domain.xml file.
 Edit again the `domain.conf` file and add the configuration file settings for the `JAVA_OPTS` variable:
 
 {% highlight bash %}
+##around line 50
 [root@server-domain ~]# vi /usr/local/wildfly/wildfly-18.0.1.Final/bin/domain.conf
 
 if [ "x$JAVA_OPTS" = "x" ]; then
@@ -277,6 +283,7 @@ if [ "x$JAVA_OPTS" = "x" ]; then
    #Edit this line
    JAVA_OPTS="$JAVA_OPTS -Djboss.bind.address.management=10.0.0.68 -Djboss.bind.address=10.0.0.68 -Djboss.domain.base.dir=/usr/local/wildfly/wildfly-18.0.1.Final/master -Djboss.host.default.config=host-master.xml"
 else
+##suppressed
 {% endhighlight %}
 
 Restart the WildFly service. 
@@ -308,7 +315,7 @@ Edit the host-slave.xml file. Add slave name and update the existing servers. Th
 ##around line 3
 <host xmlns="urn:jboss:domain:10.0" name="slave0">
     <extensions>
-##supress
+##suppressed
 {% endhighlight %}
 
 {% highlight xml %}
@@ -319,7 +326,7 @@ Edit the host-slave.xml file. Add slave name and update the existing servers. Th
             <socket-bindings port-offset="100"/>
         </server>
     </servers>
-##supress
+##suppressed
 {% endhighlight %}
 
 We also have to set the user and "secret" created in the master so we can connect the "Slave 0". 
@@ -342,7 +349,7 @@ In this same host-slave.xml file add the secret and user:
         <remote security-realm="ManagementRealm" username="admin">
             <discovery-options>
                 <static-discovery name="primary" protocol="${jboss.domain.master.protocol:remote+http}" host="${jboss.domain.master.address}" port="${jboss.domain.master.port:9990}"/>
-##supress
+##suppressed
 {% endhighlight %}
 
 Edit again the `domain.conf` file and add the configuration file settings for the `JAVA_OPTS` variable:
@@ -357,7 +364,7 @@ if [ "x$JAVA_OPTS" = "x" ]; then
    ##Add this line
    JAVA_OPTS="$JAVA_OPTS -Djboss.domain.base.dir=/usr/local/wildfly/wildfly-18.0.1.Final/slave0 -Djboss.host.default.config=host-slave.xml -Djboss.domain.master.address=10.0.0.68 -Djboss.bind.address=10.0.0.67"
 else
-##supress
+##suppressed
 {% endhighlight %}
 
 Restart the WildFly service: 
