update wildfly post

--- a/_posts/2019-12-21-wildfly-ha-2.md
+++ b/_posts/2019-12-21-wildfly-ha-2.md
@@ -5,7 +5,7 @@ tags: [jboss, wildfly, ha, redhat, centos, modcluster]
 comments: true
 ---
 
-In [Chapter I](http://mlab.run/2019/12/18/wildfly-ha-1), we set up the high availability of the Web layer. In this chapter we will install WildFly and connect it to Mod Cluster.
+In [Chapter I](http://mlab.run/2019/12/18/wildfly-ha-1), we set up the high availability of the Web layer. In this chapter we will install WildFly and configure the Master/Slave topology.
 
 ##  Install Wildfly 18
 
