update wildfly post

--- a/_posts/2019-12-21-wildfly-ha-3.md
+++ b/_posts/2019-12-21-wildfly-ha-3.md
@@ -29,14 +29,12 @@ The first step will be to add two new properties to our WildFly instances. The p
     <servers>
         <server name="server-marketing-0" group="marketing">
             <system-properties>
-                <property name="wildfly.instance.id" value="node-marketing-0" boot-time="true"/>
                 <property name="jboss.node.name" value="node-marketing-0" boot-time="true"/>
                 <property name="wildfly.balancer.name" value="marketing-lb" boot-time="true"/>
             </system-properties>
         </server>
         <server name="server-accounting-0" group="accounting">
             <system-properties>
-                <property name="wildfly.instance.id" value="node-accounting-0" boot-time="true"/>
                 <property name="jboss.node.name" value="node-accounting-0" boot-time="true"/>
                 <property name="wildfly.balancer.name" value="accounting-lb" boot-time="true"/>
             </system-properties>
@@ -59,14 +57,12 @@ Now perform the same procedure for "Slave1".
     <servers>
         <server name="server-marketing-1" group="marketing">
             <system-properties>
-                <property name="wildfly.instance.id" value="node-marketing-1" boot-time="true"/>
                 <property name="jboss.node.name" value="node-marketing-1" boot-time="true"/>
                 <property name="wildfly.balancer.name" value="marketing-lb" boot-time="true"/>
             </system-properties>
         </server>
         <server name="server-accounting-1" group="accounting">
             <system-properties>
-                <property name="wildfly.instance.id" value="node-accounting-1" boot-time="true"/>
                 <property name="jboss.node.name" value="node-accounting-1" boot-time="true"/>
                 <property name="wildfly.balancer.name" value="accounting-lb" boot-time="true"/>
             </system-properties>
@@ -74,6 +70,46 @@ Now perform the same procedure for "Slave1".
         </server>
     </servers>
 ##suppressed
+{% endhighlight %}
+
+As you may have noticed, every configuration of the technologies available in WildFly is done  in the "Master". Remember that we currently have two groups "marketing" and "accounting" that are using the profile "full-ha" and socket-binding "full-ha-sockets".
+
+Then in the "Master" edit the domain.xml file and add a new socket with our VIP defined in chapter I.
+
+{% highlight bash %}
+[root@server-domain ~]# pwd
+/usr/local/wildfly/wildfly-18.0.1.Final
+[root@server-domain ~]# vi master/configuration/domain.xml 
+{% endhighlight %}
+
+{% highlight xml %}
+##around line 1880 // full-ha-sockets
+        <outbound-socket-binding name="proxy">
+            <remote-destination host="10.0.0.90" port="9090"/>
+        </outbound-socket-binding>
+##suppressed
+{% endhighlight %}
+
+Within the "full-ha" profile edit the modcluster subsystem and add the instance-id and balancer properties.
+
+{% highlight xml %}
+##around line 1658 // profile full-ha
+        <proxy name="default" advertise-socket="modcluster" listener="ajp" proxies="proxy" balancer="${wildfly.balancer.name}">
+##suppressed
+{% endhighlight %}
+
+Restart the WildFly service on the master and then on the slaves.
+
+{% highlight bash %}
+[root@server-domain ~]# systemctl restart wildfly
+{% endhighlight %}
+
+{% highlight bash %}
+[root@server-slave-0 ~]# systemctl restart wildfly
+{% endhighlight %}
+
+{% highlight bash %}
+[root@server-slave-1 ~]#  systemctl restart wildfly
 {% endhighlight %}
 
 
