--- a/_posts/2019-12-18-wildfly-ha-1.md
+++ b/_posts/2019-12-18-wildfly-ha-1.md
@@ -211,9 +211,10 @@ The best way to get updated binaries for CentoS 7 is by compiling. I know this c
 {% highlight bash %}
 [root@apache-httpd-01 ~]# yum install git cmake gcc gcc-c++ apt-util apr-devel apr-util-devel httpd-devel -y
 [root@apache-httpd-01 ~]# cd /tmp
-[root@apache-httpd-01 ~]# git clone https://github.com/modcluster/mod_proxy_cluster.git
-[root@apache-httpd-01 ~]# cd mod_proxy_cluster
-[root@apache-httpd-01 ~]# cd mod_proxy_cluster/native/
+[root@apache-httpd-01 ~]# git clone https://github.com/modcluster/mod_cluster.git
+[root@apache-httpd-01 ~]# cd mod_cluster
+[root@apache-httpd-01 ~]# git checkout 1.3.x
+[root@apache-httpd-01 ~]# cd native
 [root@apache-httpd-01 ~]# mkdir build
 [root@apache-httpd-01 ~]# cd build
 [root@apache-httpd-01 build]# cmake ../ -G "Unix Makefiles"
