update wildfly post

--- a/_posts/2019-12-21-wildfly-ha-3.md
+++ b/_posts/2019-12-21-wildfly-ha-3.md
@@ -109,9 +109,12 @@ Restart the WildFly service on the master and then on the slaves.
 {% endhighlight %}
 
 {% highlight bash %}
-[root@server-slave-1 ~]#  systemctl restart wildfly
+[root@server-slave-1 ~]# systemctl restart wildfly
 {% endhighlight %}
 
+Access the VIP IP on the Mod Cluster port and context: http://10.0.0.90:9090/mod_cluster_manager. See that our instances are now connected and ready to use:
+
+![](/images/201912-hawildfly-11.png)
 
 
 Best, #WIP
