update wildfly post

--- a/_posts/2019-12-21-wildfly-ha-3.md
+++ b/_posts/2019-12-21-wildfly-ha-3.md
@@ -116,5 +116,11 @@ Access the VIP IP on the Mod Cluster port and context: http://10.0.0.90:9090/mod
 
 ![](/images/201912-hawildfly-12.png)
 
+Deploy the [cluster.war](https://github.com/msmagnanijr/mlab-run-blog-files/blob/master/wildfly-ha/cluster.war) application. Open the management console and go to "deployments" --> "content-repository" and upload the application. After that "deploy" --> "Deploy Content" --> choose "marketing" server group.
+
+If the application is successfully deployed, you will see the context in "mod_cluster_manager": http://10.0.0.90:9090/mod_cluster_manager
+
+![](/images/201912-hawildfly-13.png)
+
 
 Best, #WIP
