update wildfly post

--- a/_posts/2019-12-21-wildfly-ha-3.md
+++ b/_posts/2019-12-21-wildfly-ha-3.md
@@ -122,5 +122,61 @@ If the application is successfully deployed, you will see the context in "mod_cl
 
 ![](/images/201912-hawildfly-13.png)
 
+If you try to access the "application context" (http://10.0.0.90/cluster) through VIP you will get a 404 because the virtual host for that application has not yet been configured.
+
+So now let's create a new virtual host to make the application that was deployed in the "marketing" group available through VIP.
+
+{% highlight bash %}
+[root@apache-httpd-01 ~]# vi /etc/httpd/conf.d/virtual_host.conf
+<VirtualHost *:80>
+    ServerName marketing.mmagnani.lab
+    ProxyPass        / balancer://marketing-lb/ stickysession=JSESSIONID|jsessionid nofailover=On
+    ProxyPassReverse / balancer://marketing-lb/
+</VirtualHost>
+{% endhighlight %}
+
+{% highlight bash %}
+[root@apache-httpd-02 ~]# vi /etc/httpd/conf.d/virtual_host.conf
+<VirtualHost *:80>
+    ServerName marketing.mmagnani.lab
+    ProxyPass        / balancer://marketing-lb/ stickysession=JSESSIONID|jsessionid nofailover=On
+    ProxyPassReverse / balancer://marketing-lb/
+</VirtualHost>
+{% endhighlight %}
+
+Add an entry in your DNS for the name "marketing.mmagnani.lab" pointing to the VIP which in this case is 10.0.0.90.
+
+In the "Master" edit the domain.xml file and update the default virtual host on undertow subsystem.
+
+{% highlight bash %}
+[root@server-domain ~]# pwd
+/usr/local/wildfly/wildfly-18.0.1.Final
+[root@server-domain ~]# vi master/configuration/domain.xml 
+{% endhighlight %}
+
+{% highlight xml %}
+##around line 1735
+            <host name="default-host" alias="marketing.mmagnani.lab" default-web-module="cluster.war" />
+##suppressed
+{% endhighlight %}
+
+Restart the WildFly service on the master and then on the slaves.
+
+{% highlight bash %}
+[root@server-domain ~]# systemctl restart wildfly
+{% endhighlight %}
+
+{% highlight bash %}
+[root@server-slave-0 ~]# systemctl restart wildfly
+{% endhighlight %}
+
+{% highlight bash %}
+[root@server-slave-1 ~]# systemctl restart wildfly
+{% endhighlight %}
+
+Finally open the browser and access the application URL: http://marketing.mmagnani.lab
+
+![](/images/201912-hawildfly-14.png)
+
 
 Best, #WIP
