update wildfly post

--- a/_posts/2019-12-21-wildfly-ha-3.md
+++ b/_posts/2019-12-21-wildfly-ha-3.md
@@ -178,5 +178,16 @@ Finally open the browser and access the application URL: http://marketing.mmagna
 
 ![](/images/201912-hawildfly-14.png)
 
+This way our applications will respond via virtual host/VIP. So let's test the high availability of the application.
+
+The request has been redirected to server "server-marketing-0". So go to "Runtime" --> "Hosts" --> "slave0" and stop "server-marketing-0".
+
+![](/images/201912-hawildfly-15.png)
+
+Open the app URL again: http://marketing.mmagnani.lab
+
+![](/images/201912-hawildfly-16.png)
+
+This time the request was redirected to "node-marketing-1". High availability is working correctly.
 
 Best, #WIP
