update wildfly post

--- a/_posts/2019-12-21-wildfly-ha-3.md
+++ b/_posts/2019-12-21-wildfly-ha-3.md
@@ -190,4 +190,6 @@ Open the app URL again: http://marketing.mmagnani.lab
 
 This time the request was redirected to "node-marketing-1". High availability is working correctly.
 
-Best, #WIP
+Unfortunately the session was not maintained, this is because we have not yet configured our cluster. So in the next chapter we will configure the cluster with JGroups / TCPPing.
+
+Best,
