update wildfly post

--- a/_posts/2019-12-23-wildfly-ha-4.md
+++ b/_posts/2019-12-23-wildfly-ha-4.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Building a Mission-Critical Open Source Environment for the Java Platform - Chapter III #WIP
+title: Building a Mission-Critical Open Source Environment for the Java Platform - Chapter IV-#WIP
 tags: [jboss, wildfly, ha, redhat, centos, modcluster]
 comments: true
 ---
