update wildfly post

--- a/_posts/2019-12-21-wildfly-ha-3.md
+++ b/_posts/2019-12-21-wildfly-ha-3.md
@@ -263,7 +263,7 @@ Edit the `domain.conf` file and add the configuration this interface on the `JAV
 
 {% highlight bash %}
 ##around line 50
-[root@server-domain ~]# vi /usr/local/wildfly/wildfly-18.0.1.Final/bin/domain.conf
+[root@server-slave-0 ~]# vi /usr/local/wildfly/wildfly-18.0.1.Final/bin/domain.conf
 
 if [ "x$JAVA_OPTS" = "x" ]; then
    JAVA_OPTS="-Xms64m -Xmx512m -XX:MaxMetaspaceSize=256m -Djava.net.preferIPv4Stack=true"
@@ -295,7 +295,7 @@ Edit the `domain.conf` file and add the configuration this interface on the `JAV
 
 {% highlight bash %}
 ##around line 50
-[root@server-domain ~]# vi /usr/local/wildfly/wildfly-18.0.1.Final/bin/domain.conf
+[root@server-slave-1 ~]# vi /usr/local/wildfly/wildfly-18.0.1.Final/bin/domain.conf
 
 if [ "x$JAVA_OPTS" = "x" ]; then
    JAVA_OPTS="-Xms64m -Xmx512m -XX:MaxMetaspaceSize=256m -Djava.net.preferIPv4Stack=true"
