--- a/_posts/2019-12-21-wildfly-ha-3.md
+++ b/_posts/2019-12-21-wildfly-ha-3.md
@@ -233,15 +233,45 @@ The first step is to set up a new "stack" in the profile we are using, which in 
 Now in the server-group "marketing" add a new property with WildFly instance IP and port.
 
 {% highlight xml %}
-##around line 1892
+##around line 1924
 ##10.0.0.67 slave0  
 ##10.0.0.66 slave1
+    <server-groups>
+        <server-group name="marketing" profile="full-ha">
+            <jvm name="default">
+                <heap size="64m" max-size="512m"/>
+            </jvm>
+            <socket-binding-group ref="full-ha-sockets"/>
+            <deployments>
+                <deployment name="cluster.war" runtime-name="cluster.war"/>
+            </deployments>
             <system-properties>
                 <property name="wildfly.cluster.tcp.initial_hosts" value="10.0.0.67[7600],10.0.0.66[7600]"/>
                 <property name="wildfly.cluster.tcp.port_range" value="0"/>
             </system-properties>
+        </server-group>
 ##suppressed
 {% endhighlight %}
+
+Add the above properties to the server-group "accounting" because as we are using the same profile "full-ha" the instances will start with some issues because they do not know these properties.
+
+{% highlight xml %}
+##around line 1934
+##10.0.0.67 slave0  
+##10.0.0.66 slave1
+        <server-group name="accounting" profile="full-ha">
+            <jvm name="default">
+                <heap size="64m" max-size="512m"/>
+            </jvm>
+            <socket-binding-group ref="full-ha-sockets"/>
+            <system-properties>
+                <property name="wildfly.cluster.tcp.initial_hosts" value="10.0.0.67[7700],10.0.0.66[7700]"/>
+                <property name="wildfly.cluster.tcp.port_range" value="0"/>
+            </system-properties>
+        </server-group>
+##suppressed
+{% endhighlight %}
+
 
 For TCPING to work correctly you will need to add a private interface to Slaves. So let's start by editing the host-slave.xml file in "Slave 0". 
 
