--- a/_posts/2019-12-23-wildfly-ha-4.md
+++ b/_posts/2019-12-23-wildfly-ha-4.md
@@ -11,4 +11,9 @@ Below are the chapters I, II and III:
 * [Building a Mission-Critical Open Source Environment for the Java Platform - Chapter II](http://mlab.run/2019/12/21/wildfly-ha-2)
 * [Building a Mission-Critical Open Source Environment for the Java Platform - Chapter III](http://mlab.run/2019/12/21/wildfly-ha-3/)
 
+## Prometheus JMX Exporter on WildFly
+
+A simple (but intrusive) way to monitor our WildFly / Applications instances is by using JMX Exporter. JMX Exporter will expose an endpoint that will be consumed by Prometheus.
+
+
 Best, #WIP
