add more content

--- a/_posts/2019-12-23-wildfly-ha-4.md
+++ b/_posts/2019-12-23-wildfly-ha-4.md
@@ -11,9 +11,34 @@ Below are the chapters I, II and III:
 * [Building a Mission-Critical Open Source Environment for the Java Platform - Chapter II](http://mlab.run/2019/12/21/wildfly-ha-2)
 * [Building a Mission-Critical Open Source Environment for the Java Platform - Chapter III](http://mlab.run/2019/12/21/wildfly-ha-3/)
 
-## Prometheus JMX Exporter on WildFly
+##  WildFly Instance Scalability with Ansible
 
-A simple (but intrusive) way to monitor our WildFly / Applications instances is by using JMX Exporter. JMX Exporter will expose an endpoint that will be consumed by Prometheus.
+We will scale our instances manually using JBoss CLI and later this will be done automatically using a trigger via AlertManager and Ansible AWX.
 
+So the first step is to test the creation of a new instance using JBoss CLI.
+
+Use the master host itself for these tests. Create a file called create-servers.cli:
+
+{% highlight bash %}
+/host=slave0/server-config=server-marketing-7:add(auto-start=true,socket-binding-port-offset=400,group=marketing)
+/host=slave0/server-config=server-marketing-7/system-property=jboss.node.name:add(value=node-marketing-7)
+/host=slave0/server-config=server-marketing-7/system-property=wildfly.balancer.name:add(value=marketing-lb)
+/host=slave0/server=server-marketing-7:start
+{% endhighlight %}
+
+After that runs via command line:
+
+{% highlight bash %}
+[root@server-domain ~]# sh /usr/local/wildfly/wildfly-18.0.1.Final/bin/jboss-cli.sh -c --controller=10.0.0.68:9990 --user=admin --password=redhat --file=create-server.cli
+{% endhighlight %}
+
+The script creates a new WildFly instance (server-marketing-7) on slave0 and starts it immediately.
+
+Note that a few seconds later the instance is already available on the balancer and also the deployment will be deployed automatically. This gives us a very interesting scalability in our WildFly environment.
+
+![](/images/201912-hawildfly-19.png)
+
+
+![](/images/201912-hawildfly-20.png)
 
 Best, #WIP
