add more content

--- a/_posts/2019-12-23-wildfly-ha-4.md
+++ b/_posts/2019-12-23-wildfly-ha-4.md
@@ -11,13 +11,13 @@ Below are the chapters I, II and III:
 * [Building a Mission-Critical Open Source Environment for the Java Platform - Chapter II](http://mlab.run/2019/12/21/wildfly-ha-2)
 * [Building a Mission-Critical Open Source Environment for the Java Platform - Chapter III](http://mlab.run/2019/12/21/wildfly-ha-3/)
 
-##  WildFly Instance Scalability with Ansible
+##  WildFly Scalability
 
-We will scale our instances manually using JBoss CLI and later this will be done automatically using a trigger via AlertManager and Ansible AWX.
+We will scale our instances manually using JBoss CLI and later this will be done automatically using a trigger via AlertManager.
 
 So the first step is to test the creation of a new instance using JBoss CLI.
 
-Use the master host itself for these tests. Create a file called create-servers.cli:
+Use the master host itself for these tests. Create a file called create-server.cli:
 
 {% highlight bash %}
 /host=slave0/server-config=server-marketing-7:add(auto-start=true,socket-binding-port-offset=400,group=marketing)
@@ -34,11 +34,17 @@ After that runs via command line:
 
 The script creates a new WildFly instance (server-marketing-7) on slave0 and starts it immediately.
 
-Note that a few seconds later the instance is already available on the balancer and also the deployment will be deployed automatically. This gives us a very interesting scalability in our WildFly environment.
+Note that a few seconds later the instance is already available on the balancer and also the application will be deployed automatically. This gives us a very interesting scalability in our WildFly environment.
 
 ![](/images/201912-hawildfly-19.png)
 
 
 ![](/images/201912-hawildfly-20.png)
+
+Unfortunately this process is manual and failures can happen. We will automate it in the next steps.
+
+##  WIP
+
+
 
 Best, #WIP
