--- a/_posts/2019-12-23-wildfly-ha-4.md
+++ b/_posts/2019-12-23-wildfly-ha-4.md
@@ -43,8 +43,132 @@ Note that a few seconds later the instance is already available on the balancer 
 
 Unfortunately this process is manual and failures can happen. We will automate it in the next steps.
 
-##  WIP
+##  WildFly Event-based Auto Scaling
 
+To achieve the goal simply and effectively we will use Prometheus, AlertManager and Webhook. 
+
+* Prometheus - https://prometheus.io
+* AlertManager - https://prometheus.io/docs/alerting/alertmanager
+* Webhook - https://github.com/adnanh/webhook
+
+For this purpose I will use the server: monitor.mmagnani.lab - 10.0.0.117
+
+The first step is to install Webhook.
+
+{% highlight bash %}
+[root@monitor ~]# cat /etc/redhat-release 
+CentOS Linux release 7.7.1908 (Core)
+[root@monitor ~]# systemctl stop firewalld
+[root@monitor ~]# systemctl disable firewalld
+[root@monitor ~]# setenforce 0
+[root@monitor ~]# sed -i "s/^SELINUX=enforcing/SELINUX=disabled/g" /etc/selinux/config
+[root@monitor ~]# mkdir -p /usr/local/webhook
+[root@monitor ~]# wget https://github.com/adnanh/webhook/releases/download/2.6.11/webhook-linux-amd64.tar.gz -P /usr/local/webhook/
+[root@monitor ~]# cd /usr/local/webhook/
+[root@monitor ~]# tar -xzvf webhook-linux-amd64.tar.gz 
+[root@monitor ~]# cd webhook-linux-amd64
+[root@monitor ~]# ls
+webhook
+[root@monitor ~]# pwd
+/usr/local/webhook/webhook-linux-amd64
+{% endhighlight %}
+
+Now create the hooks.json file that will contain the action to take when any event happens:
+
+{% highlight bash %}
+[root@monitor ~]# pwd
+/usr/local/webhook/webhook-linux-amd64
+[root@monitor ~]# vi /usr/local/webhook/webhook-linux-amd64/hooks.json
+{% endhighlight %}
+{% highlight json %}
+[
+  {
+    "id": "scale-wildfly",
+    "execute-command": "/var/scripts/scale-wildfly.sh",
+    "command-working-directory": "/var/webhook"
+  }
+]
+{% endhighlight %}
+
+Create the scale-wildfly.sh script that will actually contain JBoss CLI actions:
+
+{% highlight bash %}
+[root@monitor ~]# mkdir -p /var/scripts/
+[root@monitor ~]# mkdir -p /var/webhook
+[root@monitor ~]# vi /var/scripts/scale-wildfly.sh
+#!/bin/bash
+/usr/local/wildfly/wildfly-18.0.1.Final/bin/jboss-cli.sh -c --controller=10.0.0.68:9990  <<EOF
+/host=slave0/server-config=server-marketing-8:add(auto-start=true,socket-binding-port-offset=400,group=marketing)
+/host=slave0/server-config=server-marketing-8/system-property=jboss.node.name:add(value=node-marketing-8)
+/host=slave0/server-config=server-marketing-8/system-property=wildfly.balancer.name:add(value=marketing-lb)
+/host=slave0/server=server-marketing-8:start
+EOF
+[root@monitor ~]# chmod +x /var/scripts/scale-wildfly.sh
+{% endhighlight %}
+
+We will need the client which in this case is the JBoss CLI. For simplicity I will just unzip WildFly's zip into a directory.
+
+{% highlight bash %}
+[root@monitor ~]# yum install java-1.8.0-openjdk-devel.x86_64 -y
+[root@monitor ~]# mkdir -p /usr/local/wildfly
+[root@monitor ~]# wget https://download.jboss.org/wildfly/18.0.1.Final/wildfly-18.0.1.Final.zip -P /usr/local/wildfly
+[root@monitor ~]# cd /usr/local/wildfly
+[root@monitor ~]# unzip wildfly-18.0.1.Final.zip
+{% endhighlight %}
+
+Now start webhook:
+
+{% highlight bash %}
+[root@monitor ~]# pwd
+/usr/local/webhook/webhook-linux-amd64
+[root@monitor ~]# ./webhook  -hooks hooks.json -verbose
+ ####TODO put this as a service script
+{% endhighlight %}
+
+It will start up on default port 9000 and will provide you with one HTTP endpoint: http://monitor.mmagnani.lab:9000/hooks/scale-wildfly
+
+By performing a simple HTTP GET or POST request to that endpoint, the specified script would be executed.
+
+{% highlight bash %}
+[webhook] 2019/12/27 17:25:59 [b23fed] incoming HTTP request from 10.0.0.114:52462
+[webhook] 2019/12/27 17:25:59 [b23fed] scale-wildfly got matched
+[webhook] 2019/12/27 17:25:59 [b23fed] error parsing body payload due to unsupported content type header: 
+[webhook] 2019/12/27 17:25:59 [b23fed] scale-wildfly hook triggered successfully
+[webhook] 2019/12/27 17:25:59 200 | 232.132µs | monitor.mmagnani.lab:9000 | GET /hooks/scale-wildfly 
+[webhook] 2019/12/27 17:25:59 [b23fed] executing /var/scripts/scale-wildfly.sh (/var/scripts/scale-wildfly.sh) with arguments ["/var/scripts/scale-wildfly.sh"] and environment [] using /var/webhook as cwd
+[webhook] 2019/12/27 17:26:02 [b23fed] command output: [domain@10.0.0.68:9990 /] /host=slave0/server-config=server-marketing-8:add(auto-start=true,socket-binding-port-offset=400,group=marketing)
+{
+    "outcome" => "success",
+    "result" => undefined,
+    "server-groups" => undefined
+}
+[domain@10.0.0.68:9990 /] /host=slave0/server-config=server-marketing-8/system-property=jboss.node.name:add(value=node-marketing-8)
+{
+    "outcome" => "success",
+    "result" => undefined,
+    "server-groups" => undefined
+}
+[domain@10.0.0.68:9990 /] /host=slave0/server-config=server-marketing-8/system-property=wildfly.balancer.name:add(value=marketing-lb)
+{
+    "outcome" => "success",
+    "result" => undefined,
+    "server-groups" => undefined
+}
+[domain@10.0.0.68:9990 /] /host=slave0/server=server-marketing-8:start
+{
+    "outcome" => "success",
+    "result" => "STARTING"
+}
+[domain@10.0.0.68:9990 /] 
+{% endhighlight %}
+
+Note that the cluster was automatically escalated through a request using the endpoint.
+
+![](/images/201912-hawildfly-21.png)
+
+Our goal was successfully achieved! The next step is to do this through AlertManager.
+
+So at this point we will install Prometheus.
 
 
 Best, #WIP
