add more content

--- a/_posts/2019-12-23-wildfly-ha-4.md
+++ b/_posts/2019-12-23-wildfly-ha-4.md
@@ -170,5 +170,60 @@ Our goal was successfully achieved! The next step is to do this through AlertMan
 
 So at this point we will install Prometheus.
 
+{% highlight bash %}
+[root@monitor ~]# cd /tmp
+[root@monitor ~]# wget https://github.com/prometheus/prometheus/releases/download/v2.15.1/prometheus-2.15.1.linux-amd64.tar.gz
+{% endhighlight %}
+[root@monitor ~]# useradd --no-create-home --shell /bin/false prometheus
+[root@monitor ~]# mkdir /etc/prometheus
+[root@monitor ~]# mkdir /var/lib/prometheus
+[root@monitor ~]# chown prometheus:prometheus /etc/prometheus
+[root@monitor ~]# chown prometheus:prometheus /var/lib/prometheus
+[root@monitor ~]# tar -xvzf tar prometheus-2.15.1.linux-amd64.tar.gz
+[root@monitor ~]# mv prometheus-2.15.1.linux-amd64 prometheus-package
+[root@monitor ~]# cp prometheus-package/prometheus /usr/local/bin/
+[root@monitor ~]# cp prometheus-package/promtool /usr/local/bin/
+[root@monitor ~]# chown prometheus:prometheus /usr/local/bin/prometheus
+[root@monitor ~]# chown prometheus:prometheus /usr/local/bin/promtool
+[root@monitor ~]# cp -r prometheus-package/consoles /etc/prometheus
+[root@monitor ~]# cp -r prometheus-package/console_libraries /etc/prometheus
+[root@monitor ~]# chown -R prometheus:prometheus /etc/prometheus/consoles
+[root@monitor ~]# chown -R prometheus:prometheus /etc/prometheus/console_libraries
+[root@monitor ~]# vi /etc/prometheus/prometheus.yml
+
+global:
+  scrape_interval: 10s
+
+scrape_configs:
+  - job_name: 'prometheus_master'
+    scrape_interval: 5s
+    static_configs:
+      - targets: ['localhost:9090']
+
+[root@monitor ~]# chown prometheus:prometheus /etc/prometheus/prometheus.yml
+[root@monitor ~]# vi /etc/systemd/system/prometheus.service
+
+[Unit]
+Description=Prometheus
+Wants=network-online.target
+After=network-online.target
+
+[Service]
+User=prometheus
+Group=prometheus
+Type=simple
+ExecStart=/usr/local/bin/prometheus --config.file /etc/prometheus/prometheus.yml --storage.tsdb.path /var/lib/prometheus --web.console.templates=/etc/prometheus/consoles --web.console.libraries=/etc/prometheus/console_libraries
+
+[Install]
+WantedBy=multi-user.target
+
+[root@monitor ~]# systemctl daemon-reload
+[root@monitor ~]# systemctl start prometheus
+[root@monitor ~]# systemctl status prometheus
+{% endhighlight %}
+
+Use the following Url to access UI: http://monitor.mmagnani.lab:9090
+
+![](/images/201912-hawildfly-22.png)
 
 Best, #WIP
