add more content

--- a/_posts/2019-12-23-wildfly-ha-4.md
+++ b/_posts/2019-12-23-wildfly-ha-4.md
@@ -225,4 +225,158 @@ Use the following Url to access UI: http://monitor.mmagnani.lab:9090
 
 ![](/images/201912-hawildfly-22.png)
 
-Best, #WIP
+Now let's install the blackbox exporter. The blackbox exporter allows blackbox probing of endpoints over HTTP, HTTPS, DNS, TCP and ICMP. 
+
+{% highlight bash %}
+[root@monitor ~]# cd /tmp
+[root@monitor ~]# wget https://github.com/prometheus/blackbox_exporter/releases/download/v0.16.0/blackbox_exporter-0.16.0.linux-amd64.tar.gz
+[root@monitor ~]# useradd --no-create-home --shell /bin/false blackbox_exporter
+[root@monitor ~]# tar -xvf blackbox_exporter-0.16.0.linux-amd64.tar.gz
+[root@monitor ~]# cp blackbox_exporter-0.16.0.linux-amd64/blackbox_exporter /usr/local/bin/blackbox_exporter
+[root@monitor ~]# chown blackbox_exporter:blackbox_exporter /usr/local/bin/blackbox_exporter
+[root@monitor ~]# mkdir /etc/blackbox_exporter
+[root@monitor ~]# vi /etc/blackbox_exporter/blackbox.yml
+
+modules:
+  http_2xx:
+    prober: http
+    timeout: 5s
+    http:
+      valid_status_codes: []
+      method: GET
+
+[root@monitor ~]# chown blackbox_exporter:blackbox_exporter /etc/blackbox_exporter/blackbox.yml
+[root@monitor ~]# vi /etc/systemd/system/blackbox_exporter.service
+
+[Unit]
+Description=Blackbox Exporter
+Wants=network-online.target
+After=network-online.target
+
+[Service]
+User=blackbox_exporter
+Group=blackbox_exporter
+Type=simple
+ExecStart=/usr/local/bin/blackbox_exporter --config.file /etc/blackbox_exporter/blackbox.yml
+
+[Install]
+WantedBy=multi-user.target
+
+[root@monitor ~]# systemctl daemon-reload
+[root@monitor ~]# systemctl start blackbox_exporter
+[root@monitor ~]# systemctl enable blackbox_exporter
+{% endhighlight %}
+
+Now edit the Prometheus configuration and add our target:
+
+{% highlight bash %}
+[root@monitor ~]# vi /etc/prometheus/prometheus.yml
+
+  - job_name: 'blackbox-marketing'
+    metrics_path: /probe
+    params:
+      module: [http_2xx]
+    static_configs:
+      - targets:
+        - http://marketing.mmagnani.lab
+    relabel_configs:
+      - source_labels: [__address__]
+        target_label: __param_target
+      - source_labels: [__param_target]
+        target_label: instance
+      - target_label: __address__
+        replacement: localhost:9115
+
+[root@monitor ~]# systemctl restart prometheus
+{% endhighlight %}
+
+Create a alarm definition:
+
+{% highlight bash %}
+[root@monitor ~]# vi /etc/prometheus/alert.rules.yml
+
+groups:
+- name: alert.rules
+  rules:
+  - alert: EndpointDown
+    expr: probe_success == 0
+    for: 10s
+    labels:
+      severity: "critical"
+    annotations:
+      summary: "Endpoint  down"
+
+[root@monitor ~]# chown prometheus:prometheus /etc/prometheus/alert.rules.yml
+[root@monitor ~]# promtool check rules /etc/prometheus/alert.rules.yml
+[root@monitor ~]# systemctl restart prometheus
+{% endhighlight %}
+
+Please note that the Prometheus Target definitions already display our probe:
+
+![](/images/201912-hawildfly-23.png)
+
+
+Finally install AlertManager.
+
+{% highlight bash %}
+[root@monitor ~]# cd /tmp
+[root@monitor ~]# wget https://github.com/prometheus/alertmanager/releases/download/v0.20.0/alertmanager-0.20.0.linux-amd64.tar.gz
+[root@monitor ~]# useradd --no-create-home --shell /bin/false alertmanager
+[root@monitor ~]# tar -xvf alertmanager-0.20.0.linux-amd64.tar.gz 
+[root@monitor ~]# cp alertmanager-0.20.0.linux-amd64/alertmanager /usr/local/bin/
+[root@monitor ~]# cp alertmanager-0.20.0.linux-amd64/amtool /usr/local/bin/
+[root@monitor ~]# chown alertmanager:alertmanager /usr/local/bin/alertmanager
+[root@monitor ~]# chown alertmanager:alertmanager /usr/local/bin/amtool
+[root@monitor ~]# mkdir /etc/alertmanager
+[root@monitor ~]# vi /etc/alertmanager/alertmanager.yml
+
+global:
+
+route:
+  group_by: ['instance', 'alert']
+  group_wait: 30s
+  group_interval: 5m
+  repeat_interval: 3h
+  receiver: default-receiver
+
+receivers:
+  - name: default-receiver
+    webhook_configs:
+      - url: "http://monitor.mmagnani.lab:9000/hooks/scale-wildfly"
+
+[root@monitor ~]# chown alertmanager:alertmanager -R /etc/alertmanager
+[root@monitor ~]# vi /etc/systemd/system/alertmanager.service
+
+[Unit]
+Description=Alertmanager
+Wants=network-online.target
+After=network-online.target
+
+[Service]
+User=alertmanager
+Group=alertmanager
+Type=simple
+WorkingDirectory=/etc/alertmanager/
+ExecStart=/usr/local/bin/alertmanager --config.file=/etc/alertmanager/alertmanager.yml --web.external-url http://0.0.0.0:9093
+
+[Install]
+WantedBy=multi-user.target
+
+[root@monitor ~]# vi /etc/prometheus/prometheus.yml
+
+alerting:
+  alertmanagers:
+  - static_configs:
+    - targets:
+      - localhost:9093
+
+[root@monitor ~]# systemctl restart prometheus
+[root@monitor ~]# systemctl restart alertmanager
+{% endhighlight %}
+
+
+Let's stop all instances of the marketing group to make sure the app is down. 
+
+#WIP TODO AlertManager Review
+
+Best,
